--- a/css/clean.css
+++ b/css/clean.css
@@ -1,10 +1,17 @@
 
 :root {
-    --blue-nds : rgb(79, 179, 246);
+    --blue-nds : #4FB3F6;
     --green-nds : #53CF92;
     --yellow-nds : #ffc400;
-    --blue-hover-nds: #1091e7;
-    --green-btn-nds: #62c462;
+}
+
+#html body.mint {
+    background: white !important;
+    min-height: 100vh;
+}
+
+.content {
+    background-color: white !important;
 }
 
 /* Interface du haut */
@@ -294,6 +301,7 @@ div.options {
 .content > .body > p {
     margin-top: .6em !important;
     opacity: 65% !important;
+    color: black !important;
 }
 
 /*  -------------- Header --------------- */
@@ -308,29 +316,30 @@ div.options {
     margin: 0 !important;
 }
 
-/* Filtres selon la matière */
 select.subjects {
     border-radius: 8px;
     border: none;
     padding-left: 1em !important;
     width: 10em !important;
 }
+
 select.subjects:focus {
     border: none !important;
     outline: none !important;
 }
 
-/* Bouton pour réinitialiser les filtres des signalements */
 select.filters {
     width: 28em;
     border-radius: 8px;
     border: none;
     margin-left: 1.5em !important;
 }
+
 select.filters:focus {
     border: none !important;
     outline: none !important;
 }
+
 button.reset.btn {
     margin-left: 1.4em;
     border: none;
@@ -342,6 +351,7 @@ button.reset.btn {
     text-align: center;
     padding: 0 !important;
 }
+
 button.reset.btn i.icon.icon-remove {
     background-image: url('https://raw.githubusercontent.com/sugiiiiii/nds-moderaton-ui-ext/main/images/host/redo.svg') !important;
     zoom: 1 !important;
@@ -366,7 +376,7 @@ button.reset.btn:hover i.icon.icon-remove {
     transition: 300ms;
 }
 
-/* Footer des card modération */
+/* Footer card modération */
 #moderation-all .content .moderation-item .content .footer {
     border: none !important
 }
@@ -375,11 +385,11 @@ button.reset.btn:hover i.icon.icon-remove {
     padding-top: .5em;
     padding-bottom: .5em;
 }
+
 .footer > .row > .nick > span {
     display: none;
 }
 
-/* Icon de la personne qui a été signalée */
 .footer > .row:first-child::before {
     content: url('https://raw.githubusercontent.com/sugiiiiii/nds-moderaton-ui-ext/main/images/host/reported.svg');
     height: 15px;
@@ -390,7 +400,6 @@ button.reset.btn:hover i.icon.icon-remove {
     margin-right: -0.15em;
 }
 
-/* Icon de la personne qui a signalé */
 .footer > .row:last-child::before {
     content: url('https://raw.githubusercontent.com/sugiiiiii/nds-moderaton-ui-ext/main/images/host/reporter.svg');
     height: 15px;
@@ -401,20 +410,23 @@ button.reset.btn:hover i.icon.icon-remove {
     margin-right: -0.15em;
 }
 
-/* Scrollbar */
+
 ::-webkit-scrollbar {
     width: 6px;
     height: 0;
 }
+
 ::-webkit-scrollbar-track {
     border-radius: 10px;
 }
+
 ::-webkit-scrollbar-thumb {
     border-radius: 10px;
     background: #0e0e266e;
 }
 
 /* LOAD MORE */
+
 .loader.calm {
     border: none !important;
     border-radius: 50px;
@@ -423,7 +435,7 @@ button.reset.btn:hover i.icon.icon-remove {
     margin: auto !important;
 }
 
-/* POP UP DE MODERATION */
+/* POP UP MODERATION */
 
 .contener-center.mod {
     width: 850px !important;
@@ -433,27 +445,38 @@ button.reset.btn:hover i.icon.icon-remove {
 .boxxy .text {
     display: none;
 }
+
 #toplayer .contener-center.mod .moderation-toplayer .moderation-response {
     border-top-style: dashed;
 }
+
 .boxxy {
     border-radius: 15px !important;
     border: none !important;
 }
+
 .report.boxxy {
     padding: 1.2em !important;
     margin-bottom: 1.3em;
     border-radius: 15px !important;
+    background-color: #f7f7f7 !important;
 }
+
+#toplayer .contener-center.mod .moderation-toplayer .moderation-task.reported .boxxy.text {
+    background-color: #fbeee2;
+}
+
 .contener-center.mod {
     width: 850px !important;
 }
+
 .boxxy.text {
     border-radius: 15px !important;
 }
 
 
-/* Les raisons de suppressions */
+/* Champs de suppression */
+
 div.line > div {
     display: flex !important;
     flex-wrap: wrap;
@@ -462,8 +485,10 @@ div.line > div {
     justify-content: space-around;
     align-items: center;
 }
+
 .action-box > div > :nth-child(2) {
     width: 25% !important;
+    /* background-color: #ffeaea !important; */
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -475,11 +500,13 @@ div.line > div {
     margin-top: .8em;
     margin-bottom: .8em;
 }
+
 .subs {
     width: 70% !important;
     display: flex !important;
     padding-top: 1em;
 }
+
 span.subcategories[style="display: inline;"] {
     color: black !important;
     display: flex !important;
@@ -490,9 +517,11 @@ span.subcategories[style="display: inline;"] {
     gap: 0.5em;
 
 }
+
 .action-box > div > span.line {
     display: none;
 }
+
 span.subcategories[style="display: inline;"] > input {
     background-color: white !important;
     border-radius: 15px !important;
@@ -507,16 +536,14 @@ span.subcategories[style="display: inline;"] > input {
     font-weight: 600;
     text-shadow: none !important;
 }
+
 span.subcategories[style="display: inline;"] > input:hover {
     box-shadow: 0 0 3px 1px #ebebeb !important;
     z-index: 10;
     transition: 200ms;
 }
 
-/* ------------------------------------------------------------- */
-/* ------------------------------------------------------------- */
-/* ------------------------------------------------------------- */
-/* Modération depuis la page du devoir */
+/* Modération page de devoir */
 
 #moderate-task-toplayer {
     max-width: 850px !important;
@@ -552,19 +579,26 @@ header.toplayer-header {
     position: initial !important;
     transform: translate(25em, 2.3em) !important;
 }
+
 #moderate-task-toplayer .toplayer-header .mod-info {
     margin-bottom: 0 !important;
 }
+
 #moderate-task-toplayer .toplayer-header {
     border: none !important;
 }
+
 #moderate-task-toplayer .toplayer-body .moderation-response, #moderate-task-toplayer .toplayer-body .moderation-task {
     border: none !important;
 }
+
 .boxxy.text {
     margin-top: 1.5em !important;
     margin-bottom: 1.5em !important;
 }
+
+/* Modération depuis la page du devoir */
+
 /* Cases à cocher et boutons "Confirmer" et "Annuler" */
 .moderation-task .action-box.action-delete.boxxy.opened > div > p:last-child {
     display: grid; 
@@ -577,17 +611,19 @@ header.toplayer-header {
         "btn_cancel_nds btn_cancel_nds btn_cancel_nds"; 
     text-align: center !important;
 }
+
 .moderation-task .action-box.action-delete.boxxy.opened > div > p:last-child > button.proceed {
     grid-area: btn_confirm_nds;
 }
+
 .moderation-task .action-box.action-delete.boxxy.opened > div > p:last-child > button.resign {
     grid-area: btn_cancel_nds;
 }
+
 .sg-overlay--visible {
     border-radius: 8px !important;
 }
 
-/* Modération de réponse, réorganisation complète*/
 .moderation-response .action-box.action-delete.boxxy.opened > div > p:last-child {
     display: grid; 
     grid-template-columns: 1fr 1fr; 
@@ -599,19 +635,22 @@ header.toplayer-header {
         "btn_cancel_nds btn_cancel_nds"; 
     text-align: center !important;
 }
+
 .moderation-response .action-box.action-delete.boxxy.opened > div > p:last-child > button.proceed {
     grid-area: btn_confirm_nds;
 }
+
 .moderation-response .action-box.action-delete.boxxy.opened > div > p:last-child > button.resign {
     grid-area: btn_cancel_nds;
 }
+
 .action-box.action-delete.boxxy.opened .text-reason {
     border-radius: 8px !important;
     padding-left: 0.5em;
     padding-right: 0.5em;
 }
 
-/* Demande de correction, réorganisation complète */
+/* Demande de correction */
 .action-to-correct.boxxy.opened > div {
     width: 100% !important;
     display: grid;
@@ -623,16 +662,20 @@ header.toplayer-header {
         "btn_zone btn_zone"
         "btn_zone btn_zone";
 }
+
 .action-to-correct.boxxy.opened > div p:nth-child(2) {
     grid-area: textarea-reason;
     width: 100% !important;
     margin: auto !important;
+    /* background-color: yellow !important; */
 }
+
 .action-to-correct.boxxy.opened > div p:nth-child(3) > button:first-child {
     margin: auto !important;
     width: 100%;
     text-align: center !important;
 }
+
 .action-to-correct.boxxy.opened > div p:nth-child(3) {
     grid-area: btn_zone;
     display: flex;
@@ -654,13 +697,14 @@ textarea.text-reason {
     margin-bottom: 8px !important;
 }
 
+
 /* Pop up Notifications & Friends */
-.NestedUserPanelBubble__panel--x3Jaa {
-    width: 28vw !important;
-    height: 85vh !important;
+.NestedUserPanelBubble-module__panel--fHYof {
+    height: 70vh !important;
+    width: 60vh !important;
 }
 
-/* Plus de question à propos de <matière> */
+/* Plus de question à propos de X */
 [data-testid="newest_questions"] {
     display: none;
 }
@@ -673,15 +717,9 @@ textarea.text-reason {
     display: none;
 }
 
-/* Séparateurs avant les devoirs */
-body > div.js-page-wrapper > div > div.js-react-feed-logged-in > div.sg-layout.sg-layout--wide.sg-layout--three-columns > div > div.sg-layout__content > div.sg-flex.sg-flex--margin-bottom-m > div > div.sg-flex.sg-flex--column.sg-flex--margin-bottom-m, body > div.js-page-wrapper > div > div.js-react-feed-logged-in > div.sg-layout.sg-layout--wide.sg-layout--three-columns > div > div.sg-layout__content > div.sg-flex.sg-flex--margin-bottom-m > div > div.sg-horizontal-separator.sg-horizontal-separator--gray-40 {
-    display: none;
-}
-
 /* -------------------------------------------------------- */
 /* -------------------------------------------------------- */
 /* -------------------------------------------------------- */
-/* V10 */
 
 /* Profil via la vieille interface */
 .personal_info > a {
@@ -690,6 +728,7 @@ body > div.js-page-wrapper > div > div.js-react-feed-logged-in > div.sg-layout.s
     padding-inline: 2em;
     padding-block: 0.8em !important;
     margin-top: 1.5em;
+    margin-bottom: 1em;
     border-radius: 30px;
     transition: 200ms;
 }
@@ -777,6 +816,86 @@ input.onlylink {
     width: 100%;
     margin-bottom: 0.5em;
     margin-top: 0 !important;
+}
+
+/* Bug de contenu caché par le footer */
+div#content-old {
+    margin-bottom: 10em;
+}
+
+/* -------------------------------------------------------- */
+/* -------------------------------------------------------- */
+/* -------------------------------------------------------- */
+/* Ajout des liens dans l'historique de modération */
+a.nds-new-links {
+    color: transparent;
+    padding-right: 1em;
+    margin-right: .1em;
+    border-radius: 10px;
+    background-image: url('https://raw.githubusercontent.com/sugiiiiii/nds-moderaton-ui-ext/main/images/host/arrow-up-right.svg');
+    background-position: center;
+}
+a.nds-new-links:hover {
+    background-color: rgb(0 116 255 / 15%);
+}
+/* Uniformiser les lignes (cf ClémentCg) */
+li.QuestionActivityGroup-module__listItem--t3Zn- {
+    min-height: 32px;
+}
+
+/* Ajout lien profil old + new */
+a.nds-links {
+    color: #014a82;
+}
+
+/* Cacher bannière "Pose ta question" */
+.js-react-below-answers.empty\:sg-space-y-m.md\:empty\:sg-space-y-l {
+    display: none;
+}
+
+/* Page "Contenus de l'utilisateur" */
+div[clickbox="footer"] {
+    position: absolute;
+    width: 100%;
+    bottom: 0px;
+    margin-top:5em
+}
+
+/* Mise en forme des contenus ouvert dans l'historique */
+[data-testid="question_activity_item"] > ul {
+    background: var(--gray-20);
+    border-radius: 8px;
+    padding: 0.5em 1em 0.1em 1em;
+    margin-top: 0.3em;
+}
+
+/* -------------------------------------------------------- */
+/* -------------------------------------------------------- */
+/* -------------------------------------------------------- */
+/* Suppressions d'encadrés inutiles entre la question et l'historique */
+
+div[data-testid="add_answer_reminder"] {
+    display: none;
+}
+
+div[data-testid="answering_feed"] {
+    display: none;
+}
+
+/* -------------------------------------------------------- */
+/* -------------------------------------------------------- */
+/* -------------------------------------------------------- */
+/* Question supprimées */
+
+.QuestionBoxLayout-module__contentDeleted--kouxT {
+    background-color: var(--red-10);
+    border-radius: 6px;
+    outline: solid 1.5px var(--red-20);
+}
+
+.QuestionBoxLayout-module__contentDeleted--kouxT h1 > * {
+    color: var(--red-50) !important;
+    opacity: 80%;
 }
 
 
