--- a/clean.css
+++ b/clean.css
@@ -1,3 +1,10 @@
+/* VERSION DE L'EXTENSION */
+.sg-content-box__title h3::after {
+    content: "v11.7";
+    font-weight:100;
+    color:gray;
+    display: block;
+}
 
 :root {
     --blue-nds : #4FB3F6;
@@ -912,4 +919,15 @@ div[data-testid="answering_feed"] {
 .QuestionBoxLayout-module__contentDeleted--kouxT h1 > * {
     color: var(--red-50) !important;
     opacity: 80%;
+}
+
+/* Fix la foutue navbar */
+div#footer {
+    z-index: -50;
+}
+#content, div#content  {
+    border-radius: 24px;
+}
+.brn-moderation-panel__content {
+    border-radius: 12px;
 }
